--- a/style/sass.css
+++ b/style/sass.css
@@ -172,10 +172,12 @@ p {
 
 /* ################# NUEVO MENU ############## */
 .conte__menui {
+  z-index: 1;
   display: flex;
   width: 100%;
   margin: 0;
   border-bottom: 1px solid black;
+  background: #fff;
 }
 .conte__menui .header__index {
   height: 10vh;
@@ -1676,7 +1678,14 @@ p {
     transform: translateX(-400px);
   }
 }
-.body_proyecto .cont_inicios {
+.body_proyecto .cont_proyectos_scrolls {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  height: 100vh;
+  overflow: hidden;
+}
+.body_proyecto .cont_proyectos_scrolls .cont_inicios {
   height: 90vh;
   display: flex;
   align-items: center;
@@ -1684,7 +1693,7 @@ p {
   border-bottom: solid 1px black;
   overflow: hidden;
 }
-.body_proyecto .cont_inicios .colum_unos {
+.body_proyecto .cont_proyectos_scrolls .cont_inicios .colum_unos {
   padding-left: 1.5em;
   display: flex;
   align-items: start;
@@ -1693,7 +1702,7 @@ p {
   width: 60vw;
   gap: 2em;
 }
-.body_proyecto .cont_inicios .colum_unos .tipo {
+.body_proyecto .cont_proyectos_scrolls .cont_inicios .colum_unos .tipo {
   width: -moz-fit-content;
   width: fit-content;
   padding: 5px 10px;
@@ -1703,7 +1712,7 @@ p {
   justify-content: center;
   align-items: start;
 }
-.body_proyecto .cont_inicios .colum_unos .tipo p {
+.body_proyecto .cont_proyectos_scrolls .cont_inicios .colum_unos .tipo p {
   font-family: monaregular;
   font-size: 15px;
   font-weight: normal;
@@ -1714,13 +1723,13 @@ p {
   text-align: center;
   color: #fff;
 }
-.body_proyecto .cont_inicios .colum_unos .titulo {
+.body_proyecto .cont_proyectos_scrolls .cont_inicios .colum_unos .titulo {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: start;
 }
-.body_proyecto .cont_inicios .colum_unos .titulo h1 {
+.body_proyecto .cont_proyectos_scrolls .cont_inicios .colum_unos .titulo h1 {
   flex-grow: 0;
   font-family: monaextrabold;
   font-size: 6vw;
@@ -1732,7 +1741,7 @@ p {
   text-align: left;
   color: #000;
 }
-.body_proyecto .cont_inicios .colum_unos .parrafo p {
+.body_proyecto .cont_proyectos_scrolls .cont_inicios .colum_unos .parrafo p {
   height: 20px;
   flex-grow: 0;
   font-family: monaregular;
@@ -1745,7 +1754,7 @@ p {
   text-align: center;
   color: #000;
 }
-.body_proyecto .cont_inicios .cont_banner {
+.body_proyecto .cont_proyectos_scrolls .cont_inicios .cont_banner {
   width: 40vw;
   height: 100vh;
   background: #111111;
@@ -1755,16 +1764,21 @@ p {
   overflow: hidden;
   border-left: #000 solid 1px;
 }
-.body_proyecto .cont_inicios .cont_banner .video_pro_jannier {
+.body_proyecto .cont_proyectos_scrolls .cont_inicios .cont_banner .video_pro_jannier {
   height: 100%;
 }
-.body_proyecto .cont_acercadelproyecto {
+.body_proyecto .cont_proyectos_scrolls .cont_acercadelproyecto {
+  filter: drop-shadow(0 -6mm 4mm rgba(0, 0, 0, 0.2));
+  width: 100vw;
+  background: #ffffff;
+  position: absolute;
+  transform: translateY(100vh);
   display: flex;
   flex-direction: column;
   height: 100vh;
 }
-.body_proyecto .cont_acercadelproyecto h3 {
-  padding: 1em 0.5em 1em 0.5em;
+.body_proyecto .cont_proyectos_scrolls .cont_acercadelproyecto h3 {
+  padding: 1.4em 0.5em 0.5em 0.5em;
   flex-grow: 0;
   font-family: monabold;
   font-size: 10vh;
@@ -1773,14 +1787,14 @@ p {
   color: #000;
   border-bottom: #000 solid 1px;
 }
-.body_proyecto .cont_acercadelproyecto .cont_data_proyecto {
+.body_proyecto .cont_proyectos_scrolls .cont_acercadelproyecto .cont_data_proyecto {
   display: flex;
   flex-direction: column-reverse;
   border-bottom: #000 solid 1px;
   align-items: center;
   height: 100%;
 }
-.body_proyecto .cont_acercadelproyecto .cont_data_proyecto .data {
+.body_proyecto .cont_proyectos_scrolls .cont_acercadelproyecto .cont_data_proyecto .data {
   height: 100%;
   width: 100%;
   display: flex;
@@ -1788,7 +1802,7 @@ p {
   align-items: center;
   justify-content: space-between;
 }
-.body_proyecto .cont_acercadelproyecto .cont_data_proyecto .data .cont_dato {
+.body_proyecto .cont_proyectos_scrolls .cont_acercadelproyecto .cont_data_proyecto .data .cont_dato {
   padding-left: 1.5em;
   display: flex;
   align-items: start;
@@ -1800,7 +1814,7 @@ p {
   gap: 0.5em;
   position: relative;
 }
-.body_proyecto .cont_acercadelproyecto .cont_data_proyecto .data .cont_dato .titulo {
+.body_proyecto .cont_proyectos_scrolls .cont_acercadelproyecto .cont_data_proyecto .data .cont_dato .titulo {
   font-family: monaregular;
   font-size: 1.2vw;
   line-height: 1.36;
@@ -1808,7 +1822,7 @@ p {
   text-align: left;
   color: #000000;
 }
-.body_proyecto .cont_acercadelproyecto .cont_data_proyecto .data .cont_dato .dato {
+.body_proyecto .cont_proyectos_scrolls .cont_acercadelproyecto .cont_data_proyecto .data .cont_dato .dato {
   font-family: monabold;
   font-size: 2vw;
   font-weight: 500;
@@ -1816,7 +1830,7 @@ p {
   text-align: left;
   color: #000;
 }
-.body_proyecto .cont_acercadelproyecto .cont_data_proyecto .data .cont_dato .cont_icon {
+.body_proyecto .cont_proyectos_scrolls .cont_acercadelproyecto .cont_data_proyecto .data .cont_dato .cont_icon {
   background: #ff4d00;
   top: 0;
   position: absolute;
@@ -1824,12 +1838,12 @@ p {
   border-bottom: 1px solid black;
   border-left: 1px solid black;
 }
-.body_proyecto .cont_acercadelproyecto .cont_data_proyecto .data .cont_dato .cont_icon img {
+.body_proyecto .cont_proyectos_scrolls .cont_acercadelproyecto .cont_data_proyecto .data .cont_dato .cont_icon img {
   filter: invert(100%);
   margin: 2em;
   width: 4vw;
 }
-.body_proyecto .cont_acercadelproyecto .cont_data_proyecto .data_proyecto {
+.body_proyecto .cont_proyectos_scrolls .cont_acercadelproyecto .cont_data_proyecto .data_proyecto {
   padding: 3em 1.5em 3em 1.5em;
   width: 100%;
   font-family: monaregular;
@@ -1840,86 +1854,47 @@ p {
   color: #000;
   border-bottom: #000 1px solid;
 }
-.body_proyecto .cont_paletadecolores {
+.body_proyecto .cont_proyectos_scrolls .cont_paletadecolores {
+  filter: drop-shadow(0 -6mm 4mm rgba(0, 0, 0, 0.2));
+  width: 100vw;
+  background: #ffffff;
+  position: absolute;
+  transform: translateY(100vh);
   display: flex;
   flex-direction: column;
-  height: 80vh;
+  height: 100vh;
 }
-.body_proyecto .cont_paletadecolores h3 {
-  padding: 1em 0.5em 1em 0.5em;
+.body_proyecto .cont_proyectos_scrolls .cont_paletadecolores h3 {
+  padding: 1.4em 0.5em 0.5em 0.5em;
   flex-grow: 0;
   font-family: monabold;
-  font-size: 50px;
+  font-size: 10vh;
   font-weight: 900;
   text-align: left;
   color: #000;
   border-bottom: #000 solid 1px;
 }
-.body_proyecto .cont_paletadecolores .cont_cont_colores {
+.body_proyecto .cont_proyectos_scrolls .cont_paletadecolores .cont_cont_colores {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   height: 100%;
+  border-bottom: #000 solid 1px;
 }
-.body_proyecto .cont_paletadecolores .cont_cont_colores .color_uno {
-  width: 50%;
+.body_proyecto .cont_proyectos_scrolls .cont_paletadecolores .cont_cont_colores .cont_color_uno {
+  width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  gap: 10px;
-  padding: 10px 15px;
-  box-shadow: inset 0 0 12.7px 0 rgba(0, 0, 0, 0.25);
-  background-color: #fff;
-  border-right: #000 solid 1px;
-  border-bottom: #000 solid 1px;
-}
-.body_proyecto .cont_paletadecolores .cont_cont_colores .color_uno .titulo {
-  font-family: monasemibold;
-  font-size: 15px;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.36;
-  letter-spacing: normal;
-  text-align: left;
-  color: #000000;
-}
-.body_proyecto .cont_paletadecolores .cont_cont_colores .color_uno p {
-  width: 100%;
-  font-family: monamedium;
-  font-size: 15px;
-  font-weight: 900;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.36;
-  letter-spacing: normal;
-  text-align: end;
-  color: #000000;
-}
-.body_proyecto .cont_paletadecolores .cont_cont_colores .color_segundario {
-  display: flex;
-  flex-direction: column;
-  width: 50%;
-  height: 100%;
-  border-bottom: #000 solid 1px;
-}
-.body_proyecto .cont_paletadecolores .cont_cont_colores .color_segundario .color_dos {
-  height: 33.3%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  flex-direction: column-reverse;
+  justify-content: center;
   align-items: flex-start;
   padding: 10px 15px;
   box-shadow: inset 0 0 12.7px 0 rgba(0, 0, 0, 0.25);
-  background-color: #ff4d00;
-  border-bottom: #000 solid 1px;
 }
-.body_proyecto .cont_paletadecolores .cont_cont_colores .color_segundario .color_dos .titulo {
-  font-family: monasemibold;
-  font-size: 15px;
+.body_proyecto .cont_proyectos_scrolls .cont_paletadecolores .cont_cont_colores .cont_color_uno .titulo {
+  font-family: monaregular;
+  font-size: 1vw;
   font-weight: normal;
   font-stretch: normal;
   font-style: normal;
@@ -1928,10 +1903,9 @@ p {
   text-align: left;
   color: #ffffff;
 }
-.body_proyecto .cont_paletadecolores .cont_cont_colores .color_segundario .color_dos p {
-  width: 100%;
+.body_proyecto .cont_proyectos_scrolls .cont_paletadecolores .cont_cont_colores .cont_color_uno p {
   font-family: monamedium;
-  font-size: 15px;
+  font-size: 2vw;
   font-weight: 900;
   font-stretch: normal;
   font-style: normal;
@@ -1940,106 +1914,41 @@ p {
   text-align: end;
   color: #ffffff;
 }
-.body_proyecto .cont_paletadecolores .cont_cont_colores .color_segundario .color_tres {
-  height: 33.3%;
+.body_proyecto .cont_proyectos_scrolls .cont_fuentes {
+  filter: drop-shadow(0 -6mm 4mm rgba(0, 0, 0, 0.2));
+  width: 100vw;
+  background: #ffffff;
+  position: absolute;
+  transform: translateY(100vh);
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  padding: 10px 15px;
-  box-shadow: inset 0 0 12.7px 0 rgba(0, 0, 0, 0.25);
-  background-color: #303030;
-  border-bottom: #000 solid 1px;
+  height: 100vh;
 }
-.body_proyecto .cont_paletadecolores .cont_cont_colores .color_segundario .color_tres .titulo {
-  font-family: monasemibold;
-  font-size: 15px;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.36;
-  letter-spacing: normal;
-  text-align: left;
-  color: #ffffff;
-}
-.body_proyecto .cont_paletadecolores .cont_cont_colores .color_segundario .color_tres p {
-  width: 100%;
-  font-family: monamedium;
-  font-size: 15px;
-  font-weight: 900;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.36;
-  letter-spacing: normal;
-  text-align: end;
-  color: #ffffff;
-}
-.body_proyecto .cont_paletadecolores .cont_cont_colores .color_segundario .color_cuatro {
-  height: 33.4%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  padding: 10px 15px;
-  box-shadow: inset 0 0 12.7px 0 rgba(0, 0, 0, 0.25);
-  background-color: #000;
-}
-.body_proyecto .cont_paletadecolores .cont_cont_colores .color_segundario .color_cuatro .titulo {
-  font-family: monasemibold;
-  font-size: 15px;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.36;
-  letter-spacing: normal;
-  text-align: left;
-  color: #ffffff;
-}
-.body_proyecto .cont_paletadecolores .cont_cont_colores .color_segundario .color_cuatro p {
-  width: 100%;
-  font-family: monamedium;
-  font-size: 15px;
-  font-weight: 900;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.36;
-  letter-spacing: normal;
-  text-align: end;
-  color: #ffffff;
-}
-.body_proyecto .cont_fuentes {
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  align-items: start;
-  height: 100%;
-  width: 100%;
-}
-.body_proyecto .cont_fuentes h3 {
-  width: 100%;
-  padding: 1em 0.5em 1em 0.5em;
+.body_proyecto .cont_proyectos_scrolls .cont_fuentes h3 {
+  padding: 1.4em 0.5em 0.5em 0.5em;
   flex-grow: 0;
   font-family: monabold;
-  font-size: 50px;
+  font-size: 10vh;
   font-weight: 900;
   text-align: left;
   color: #000;
   border-bottom: #000 solid 1px;
 }
-.body_proyecto .cont_fuentes .fuente {
+.body_proyecto .cont_proyectos_scrolls .cont_fuentes .fuente {
   border-bottom: #000 solid 1px;
-  padding-top: 3em;
+  padding-top: 2em;
   padding-left: 2em;
-  padding-bottom: 3em;
+  padding-bottom: 1em;
   display: flex;
   flex-direction: column;
   align-items: start;
+  justify-content: center;
   width: 100%;
+  height: 100%;
 }
-.body_proyecto .cont_fuentes .fuente p {
-  margin: 0 132px 12px 0;
-  font-family: monalight;
-  font-size: 20px;
+.body_proyecto .cont_proyectos_scrolls .cont_fuentes .fuente p {
+  font-family: monamedium;
+  font-size: 1.2vw;
   font-weight: 300;
   font-stretch: normal;
   font-style: normal;
@@ -2048,27 +1957,26 @@ p {
   text-align: start;
   color: #000;
 }
-.body_proyecto .cont_fuentes .fuente .img_font {
-  width: 20%;
+.body_proyecto .cont_proyectos_scrolls .cont_fuentes .fuente .img_font {
+  width: 10%;
 }
-.body_proyecto .cont_fuentes .fuente .cont_fuentess {
+.body_proyecto .cont_proyectos_scrolls .cont_fuentes .fuente .cont_fuentess {
   height: 100%;
   width: 100%;
-  margin-top: 2em;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(min(70px, 100%), 1fr));
   gap: 1em;
 }
-.body_proyecto .cont_fuentes .fuente .cont_fuentess .cont_font {
+.body_proyecto .cont_proyectos_scrolls .cont_fuentes .fuente .cont_fuentess .cont_font {
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: 0.5em;
 }
-.body_proyecto .cont_fuentes .fuente .cont_fuentess .cont_font img {
-  width: 30%;
+.body_proyecto .cont_proyectos_scrolls .cont_fuentes .fuente .cont_fuentess .cont_font img {
+  width: 20%;
 }
-.body_proyecto .cont_fuentes .fuente .cont_fuentess .cont_font .nombre_fuente {
+.body_proyecto .cont_proyectos_scrolls .cont_fuentes .fuente .cont_fuentess .cont_font .nombre_fuente {
   display: inline;
   width: 100%;
   font-family: Gotham;
@@ -2078,6 +1986,8 @@ p {
   color: #000;
 }
 .body_proyecto .cont_img {
+  background: #ffffff;
+  height: 100%;
   display: flex;
   flex-direction: column;
   border-bottom: #000 solid 1px;
@@ -2087,10 +1997,10 @@ p {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 1em;
 }
 .body_proyecto .cont_img .cont_img_grup .cont_img_uno {
   width: 50%;
+  overflow: hidden;
 }
 .body_proyecto .cont_img .cont_img_grup .cont_img_uno img {
   width: 100%;
